--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -179,6 +179,8 @@
 
 <main class="main">
   <h1>Hello, Welcome</h1>
+  <textarea id="name" (change)="sayhello($event)"></textarea>
+  <p>{{response}}</p>
 </main>
 
 
